books/projects/rac/tests/yaml_test/program_structure/empty.ref.stderr
empty.cpp:1-2 (0-0): syntax error, unexpected end of file
 1 | # 1 "empty.cpp"
   | ^^^^^^^^^^^^^^^^
 2 | # 1 "empty.cpp"
   | 
